--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rab-desa-types",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -14,6 +14,7 @@
     "index.d.ts",
     "index-browser.js"
   ],
-  "author": "",
-  "license": "ISC"
+  "author": "sayinosys@gmail.com",
+  "license": "ISC",
+  "keywords": []
 }
